# fire-notes

./: .gitignore  Cargo.toml  README.md  install.sh
benches/: performance.rs
src/: app.rs  config.rs  main.rs  persistence.rs  renderer.rs  tab.rs  text_buffer.rs  theme.rs  ui.rs  visual_position.rs
src/app/: action.rs  clipboard.rs  editing.rs  file.rs  focus.rs  input.rs  input_handler.rs  keybindings.rs  mod.rs  mouse.rs  notes_picker.rs  scroll.rs  scroll_state.rs  state.rs  tabs.rs  ui_state.rs
src/renderer/: flame.rs  fonts.rs  mod.rs  notes_picker.rs  tab_bar.rs  text_content.rs  viewport.rs
src/ui/: list_widget.rs  mod.rs  scrollbar.rs  tab_bar.rs  text_area.rs  text_input.rs  tree.rs  types.rs
tests/visual/: run_visual_tests.sh
